FIX (body) : overflow hidden when page loading

--- a/assets/sass/style-default.scss
+++ b/assets/sass/style-default.scss
@@ -1,10 +1,6 @@
 
 @import "variables";
 
-html {
-    overflow: hidden;
-}
-
 // $black : #3d3d3d;
 $black : #1d1d1d;
 $color1 : #f8204b;
